Adds README, images and initial code and styling for game

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <link rel="stylesheet" href="style.css">
     <script src="app.js" charset="utf-8"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500;800;900&amp;display=swap" rel="stylesheet">
     <title>Candy Crush</title>
 </head>
 <body>
-    
+    <h1>Candy Crush</h1>
+    <h2>Score: <span id="score"></span> </h2>
+    <div class="grid"></div>
+    <footer>
+        <p><a href="https://github.com/scrabill/candy-crush" target="_blank">Candy Crush</a> code by Shannon Crabill. Tutorial by <a href="https://www.youtube.com/watch?v=XD5sZWxwJUk" target="_blank">Ania Kubów</a>.</p>
+      </footer>
 </body>
 </html>
